--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "@chakra-ui/react": "^3.5.1",
     "@google/generative-ai": "^0.21.0",
     "@heroicons/react": "^2.2.0",
+    "@langchain/core": "^0.3.57",
+    "@langchain/google-genai": "^0.2.9",
+    "@langchain/langgraph": "^0.2.73",
     "@monaco-editor/react": "^4.6.0",
     "@radix-ui/react-accordion": "^1.2.8",
     "@radix-ui/react-avatar": "^1.1.2",
@@ -27,14 +30,15 @@
     "firebase": "^11.2.0",
     "framer-motion": "^12.0.8",
     "geist": "^1.3.1",
+    "langchain": "^0.3.27",
     "lucide-react": "^0.474.0",
-    "next": "14.2.28",
+    "next": "^14.2.28",
     "next-themes": "^0.4.4",
     "nodemailer": "^6.10.0",
     "prop-types": "^15.8.1",
     "pyodide": "^0.27.2",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-firebase-hooks": "^5.1.1",
     "react-hot-toast": "^2.5.1",
     "react-icons": "^5.4.0",
